--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ nav {
   position:absolute;
   display:block;
   width:100%;
-  height: 100%;
+  height: 75vh;
   top:100px;
   left:0;
   right:0;
@@ -314,4 +314,18 @@ label img.vignette {
 
 .padding-left {
   padding-left: 0 !important;
+}
+
+.height-vh-important {
+  height: 100vh !important;
+}
+
+.active-option {
+  background: #4ACA74 !important;
+  color: #FFF !important;
+}
+
+.inactive-option {
+  background: #FFF !important;
+  color: #4ACA74 !important;
 }
