--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ nav {
 }
 
 .background-none {
-	background: none;
+	background: none !important;
 }
 
 .opacity {
@@ -201,11 +201,13 @@ nav {
 }
 
 .height-content-noticia-up {
-  height: 65vh !important;
+  /*height: 65vh !important;*/
+  height: 70% !important;
 }
 
 .height-content-noticia-down {
-  height: 35vh !important;
+  /*height: 35vh !important;*/
+  height: 30% !important;
 }
 
 .margin-bottom-clean {
@@ -242,7 +244,7 @@ nav {
   position:absolute;
   display:block;
   width:100%;
-  height: 75vh;
+  height: 72vh;
   top:100px;
   left:0;
   right:0;
@@ -328,4 +330,23 @@ label img.vignette {
 .inactive-option {
   background: #FFF !important;
   color: #4ACA74 !important;
+}
+
+.background-datahub {
+  background-image: url('../images/institucion/datahub.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.margin-top-datahub {
+  padding-top: 2em !important;
+}
+
+.padding-right-clean {
+  padding-right: 0 !important;
+}
+
+.padding-left-clean {
+  padding-left: 0 !important;
 }
