--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
 
+body {
+  font-family: 'Ubuntu', sans-serif !important;
+}
+
 nav {
   background-color: #FFFFFF;
   box-shadow: 0 0 0 0;
@@ -269,7 +273,8 @@ nav {
 
 #diapo {
   position: relative;
-  height: 30em;
+  height: 100%;
+  width: 100%;
   text-align: center;
   margin: 2em 2em;
 }
@@ -285,12 +290,10 @@ nav {
 .big_image {
   position:absolute;
   display:block;
-  width:100%;
-  height: 100%;
-  top:100px;
+  width: 100%;
+  height: 80%;
   left:0;
   right:0;
-  margin:0 auto;
   opacity:0;
   border:10px solid #FFF;
   box-shadow: 0 2px 8px 2px #666;
@@ -306,6 +309,7 @@ nav {
       -ms-transition: all 1s ease-in-out;
        -o-transition: all 1s ease-in-out;
           transition: all 1s ease-in-out;
+    
 }
 
 .big_image:hover {
@@ -395,6 +399,10 @@ label img.vignette {
   padding-top: 2em !important;
 }
 
+.padding-top-boletin {
+  padding-top: 4em !important 
+}
+
 .padding-right-clean {
   padding-right: 0 !important;
 }
@@ -412,7 +420,7 @@ label img.vignette {
 }
 
 .height-banner {
-  max-height: 25em !important;
+  max-height: 15em !important;
   overflow: hidden;
 }
 
@@ -455,4 +463,16 @@ label img.vignette {
 .padding-left-right-carousel {
   padding-left: 2em;
   padding-right: 2em;
+}
+
+.margin-top-content-noticia {
+  padding-top: 4em;
+}
+
+.padding-left-em {
+  padding-left: 3em !important;
+}
+
+.padding-right-em {
+  padding-right: 3em !important;
 }
